<?xml version="1.0" encoding="utf-8"?>
<!--
  Authors:
      Jesse Chen
  
  Copyright (c) 2011 Jesse Chen.
  
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
-->
<resources>
	<string name="app_name">Accessible Youtube</string>
	<string name="searchhint">Enter search query here</string>
	<string name="querybutton">Search Query</string>
	<string name="channelbutton">Search Channels</string>
	<string name="sharetext">Share YouTube URL</string>
	<string name="descriptitle">Description</string>
	<string name="ratingtitle">Rate the quality of captions!</string>
</resources>
