<?xml version="1.0" encoding="utf-8"?>
<!--
  Authors:
      Jesse Chen
  
  Copyright (c) 2011 Jesse Chen.
  
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
-->
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="@string/app_name"
		android:paddingBottom="50sp"
		android:gravity="center_horizontal"
		android:textSize="35sp" />
	<EditText 
		android:hint="@string/searchhint" 
		android:layout_height="70sp" 
		android:id="@+id/searchtext" 
		android:layout_marginLeft="10sp"
		android:layout_marginRight="10sp"
		android:layout_width="fill_parent"
		android:layout_gravity="center"/>
	<Button
		android:id="@+id/querybutton"
		android:layout_width="fill_parent" 
		android:layout_height="70sp"
		android:layout_marginTop="10sp"
		android:layout_marginLeft="10sp"
		android:layout_marginRight="10sp"
		android:text="@string/querybutton"
		android:textSize="20sp" 
		android:textStyle="bold"/>     		
	<Button
		android:id="@+id/channelbutton"
		android:layout_width="fill_parent" 
		android:layout_height="70sp"
		android:layout_marginTop="10sp"
		android:layout_marginLeft="10sp"
		android:layout_marginRight="10sp"
		android:text="@string/channelbutton"
		android:textSize="20sp" 
		android:textStyle="bold"/>     		
</LinearLayout>
