<?xml version="1.0" encoding="utf-8"?>

<ScrollView 
	android:id="@+id/ScrollView01" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	xmlns:android="http://schemas.android.com/apk/res/android">
	<RelativeLayout 
		android:id="@+id/LinearLayout01" 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:orientation="vertical">
		<TextView
			android:id="@+id/resulttitle"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:textSize="30sp"
			android:paddingBottom="20sp" 
			/>
        <ImageView
        	android:id="@+id/thumbnail"
        	android:layout_below="@id/resulttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp"
            android:paddingRight="15sp"
            />               			
		<Button
			android:id="@+id/userchannel"
			android:layout_below="@id/resulttitle"
        	android:layout_toRightOf="@id/thumbnail"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginTop="10sp"
			android:textSize="20sp" 
			android:textStyle="bold"
			/>     			
		<TextView
			android:id="@+id/descriptitle"
			android:layout_below="@id/thumbnail"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:textSize="20sp" 
			android:textStyle="bold"
			android:paddingLeft="7sp"
			android:text="@string/descriptitle"
			/>
		<TextView
			android:id="@+id/description"
        	android:layout_below="@id/descriptitle"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:textSize="20sp" 
			android:padding="5sp"
			android:paddingBottom="20sp"
			/>
		<TextView
			android:id="@+id/ratingtitle"
        	android:layout_below="@id/description"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:textSize="20sp" 
			android:textStyle="bold"
			android:padding="5sp"
			android:text="@string/ratingtitle"
			/>	
		<RatingBar 
			android:id="@+id/ratingbar"
        	android:layout_below="@id/ratingtitle"
     	   	android:layout_width="wrap_content"
      	 	android:layout_height="wrap_content"
       	 	android:numStars="5"
       	 	android:stepSize="1.0"
			android:paddingBottom="20sp"
       	 	/>
       	 	
        <Button
            android:id="@+id/share"
        	android:layout_below="@id/ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sharetext"
            android:textSize="20sp"
            />			
	</RelativeLayout>

</ScrollView>
